# tecd

./: .gitignore  README.md  SPECIFICATION.md  pyproject.toml  verify.py  visualize_cli.py
examples/: README.md  all_symbols.tecd  rc_filter.tecd  rectifier.tecd  rlc_series.tecd  transistors.tecd  voltage_divider.tecd  wheatstone_bridge.tecd
src/tecd/: __init__.py  ast_nodes.py  cli.py  done.txt  layout.py  layout_refactor_plan.py  lexer.py  parser.py  renderer.py  rotation_plan.py  semantics.py  symbols.py
tests/: conftest.py  test_e2e.py  test_lexer.py  test_parser.py
