[project]
name = "tecd"
version = "0.1.0"
description = "Text to Electrical Circuit Diagram compiler"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tecd"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
